# flopha

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  action.yml  package.json
.github/workflows/: ci.yml  docs.yml  release.yml  tag-action.yml  test-action.yml
action/: install.sh  run.sh
assets/brand/: site.webmanifest
scripts/: install.sh  package.sh  sync-brand.mjs
src/: cli.rs  conventional_commits.rs  error.rs  gitutils.rs  lib.rs  main.rs  service.rs  testutils.rs  utils.rs  version_source.rs  versioning.rs
website/: .gitignore  README.md  docusaurus.config.ts  package.json  pnpm-lock.yaml  sidebars.ts  tsconfig.json
website/docs/: command-reference.mdx  installation.mdx  intro.mdx  quick-start.mdx  release-workflows.mdx  version-patterns.mdx
website/src/css/: custom.css
website/src/pages/: index.module.css  index.tsx
website/src/theme/CodeBlock/Buttons/CopyButton/: index.tsx  styles.module.css
