[package]
name = "flopha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.14"
clap = { version = "3.1.18", features = ["derive"] }
openssl = { version = "0.10", features = ["vendored"] }  # to fix build error
regex = "1.5"

[dev-dependencies]
url = "2.0"
tempfile = "3"